# DirectoriesSimilarity

./: CMakeLists.txt  Dockerfile  README.md  compile_commands.json  main.cpp  run_example.sh
.cache/clangd/index/: args_product_test.cc.565953BE4C178C4D.idx  arraysize.h.322F78C20370B675.idx  basic_test.cc.39EB20C4459B9259.idx  benchmark.cc.4AB0B5A800BCD38C.idx  benchmark.cpp.9831C602F91B3B2E.idx  benchmark.h.7276C883C55AC8EE.idx  benchmark_api_internal.cc.80372A3A50EA624A.idx  benchmark_api_internal.h.7222E0F3EBBD9278.idx  benchmark_gtest.cc.B7EE5BDCF766EA75.idx  benchmark_main.cc.8005F364F45DA6EA.idx  benchmark_min_time_flag_iters_test.cc.67024CAC4E7760D0.idx  benchmark_min_time_flag_time_test.cc.D62752E522F90E65.idx  benchmark_name.cc.B597152F4B38AAEF.idx  benchmark_name_gtest.cc.EE0235F82E4F1026.idx  benchmark_random_interleaving_gtest.cc.F20C60218B103548.idx  benchmark_register.cc.A8B6207215781FAE.idx  benchmark_register.h.FE7A7015548FEEE7.idx  benchmark_runner.cc.6755CFA08A4BC27C.idx  benchmark_runner.h.81A71A053E31C3B4.idx  benchmark_setup_teardown_test.cc.86FD5C87BF3C601B.idx  benchmark_test.cc.3E03F56497B674C3.idx  check.cc.3E96CDD6CA021CC5.idx  check.h.B9BC94433884CAD8.idx  colorprint.cc.8BC9B4ACA2D8433A.idx  colorprint.h.4183AB63B69ABA0B.idx  commandlineflags.cc.58A536CC47E90849.idx  commandlineflags.h.D0A19FD4AE4FC29D.idx  commandlineflags_gtest.cc.579E8C57F8EAAAFA.idx  complexity.cc.4166E9690613EBB1.idx  complexity.h.DEA43263D6B6A9FA.idx  complexity_test.cc.53BE92CCD64DF32E.idx  console_reporter.cc.C2230B44FD017F3E.idx  counter.cc.4462B7620242962D.idx  counter.h.C373EE8C51020828.idx  csv_reporter.cc.22E24C1E925F08F6.idx  cxx03_test.cc.4A14A5DE7771B896.idx  cycleclock.h.F3C205E2D10A2AF9.idx  diagnostics_test.cc.BEC86C6D0619AD90.idx  display_aggregates_only_test.cc.3BAAF4F87F996BAB.idx  donotoptimize_test.cc.178D4A5A00BB8BAA.idx  (+106 more)
.github/workflows/: cmake-test.yml
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  unit_tests_run
build_tests/tests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_tests/tests/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_tests/tests/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
example_directories/first/: hero_of_our_time.txt
example_directories/second/: crime-and-punishment_the-to-beep.txt  hero_of_our_time-No_Pechorin.txt  war-and-peace-no-g-letter.txt
include/: directories_comparator.h  directories_comparator.hpp
include/metric/: LCS.h  counting.h  levenshtein.h  metric.h
src/: CMakeLists.txt  directories_comparator.cpp  directories_comparator.h
src/distance/: distance.h  levenshtein.cpp  levenshtein.h
src/file/: file.cpp  file.h
src/metric/: LCS.cpp  LCS.h  count.cu  counting.cpp  levenshtein.cpp  levenshtein.h
src/similarity_entry/: entry.cpp  entry.h
testing_directories/test_dir2/: bbb
testing_directories/test_dir3/: ccc
testing_directories/test_dir4/: ccc
tests/benchmark/..git/: config  index  packed-refs
tests/benchmark/..git/refs/heads/: main
tests/directories_comparator/: unit.cpp
tests/distance/: unit.cpp
tests/googletest/..git/: config  index
tests/graph/: benchmark.cpp  unit.cpp
tests/metric/: unit.cpp
(+4 files in other folders)
